// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render correctly loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-1t304j8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4F0599;
  color: #FFFFFF;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1t304j8:hover,
.cache-1t304j8:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1t304j8:hover,
.cache-1t304j8:focus {
  color: #FFFFFF;
  background-color: #420480;
}

.cache-1t304j8:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-i7e9al {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

.cache-1mntgth-ActivityIndicator {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1t304j8"
    type="button"
  >
    <div
      class="cache-i7e9al em6gco82"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="cache-1mntgth-ActivityIndicator"
        role="progressbar"
        style="height: 1em; width: 1em;"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="transparent"
          stroke-width="16"
        />
        <circle
          class="cache-wxrv4d-ActivityIndicator"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="currentColor"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
    </div>
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly loading with an icon 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-1t304j8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4F0599;
  color: #FFFFFF;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1t304j8:hover,
.cache-1t304j8:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1t304j8:hover,
.cache-1t304j8:focus {
  color: #FFFFFF;
  background-color: #420480;
}

.cache-1t304j8:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-i7e9al {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

.cache-1mntgth-ActivityIndicator {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

.cache-14frhxz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 8px;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1t304j8"
    type="button"
  >
    <div
      class="cache-i7e9al em6gco82"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="cache-1mntgth-ActivityIndicator"
        role="progressbar"
        style="height: 1em; width: 1em;"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="transparent"
          stroke-width="16"
        />
        <circle
          class="cache-wxrv4d-ActivityIndicator"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="currentColor"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
    </div>
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
    <div
      class="cache-14frhxz em6gco82"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="cache-1mntgth-ActivityIndicator"
        role="progressbar"
        style="height: 1em; width: 1em;"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="transparent"
          stroke-width="16"
        />
        <circle
          class="cache-wxrv4d-ActivityIndicator"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="currentColor"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly when acting as Link 1`] = `
<DocumentFragment>
  .cache-1youq4q {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4F0599;
  color: #FFFFFF;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1youq4q:hover,
.cache-1youq4q:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1youq4q:hover,
.cache-1youq4q:focus {
  color: #FFFFFF;
  background-color: #420480;
}

.cache-1youq4q:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<a
    aria-disabled="false"
    class="em6gco80 cache-1youq4q"
    href="/"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </a>
</DocumentFragment>
`;

exports[`Button should render correctly when acting as Link with disabled props 1`] = `
<DocumentFragment>
  .cache-1u09hi4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4F0599;
  color: #FFFFFF;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  cursor: default;
  pointer-events: none;
  color: #C4C9D6;
  background-color: #E6E9F0;
  border-color: #F6F6F8;
  box-shadow: none;
}

.cache-1u09hi4:hover,
.cache-1u09hi4:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1u09hi4:hover,
.cache-1u09hi4:focus {
  color: #FFFFFF;
  background-color: #420480;
}

.cache-1u09hi4:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="true"
    class="em6gco80 cache-1u09hi4"
    disabled=""
    to="/"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly when acting as dom link 1`] = `
<DocumentFragment>
  .cache-1t304j8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4F0599;
  color: #FFFFFF;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1t304j8:hover,
.cache-1t304j8:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1t304j8:hover,
.cache-1t304j8:focus {
  color: #FFFFFF;
  background-color: #420480;
}

.cache-1t304j8:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<a
    aria-disabled="false"
    class="em6gco80 cache-1t304j8"
    href="/"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </a>
</DocumentFragment>
`;

exports[`Button should render correctly when disabled 1`] = `
<DocumentFragment>
  .cache-1u09hi4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4F0599;
  color: #FFFFFF;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  cursor: default;
  pointer-events: none;
  color: #C4C9D6;
  background-color: #E6E9F0;
  border-color: #F6F6F8;
  box-shadow: none;
}

.cache-1u09hi4:hover,
.cache-1u09hi4:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1u09hi4:hover,
.cache-1u09hi4:focus {
  color: #FFFFFF;
  background-color: #420480;
}

.cache-1u09hi4:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="true"
    class="em6gco80 cache-1u09hi4"
    disabled=""
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly when extendable 1`] = `
<DocumentFragment>
  .cache-12ne64o {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4F0599;
  color: #FFFFFF;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.cache-12ne64o:hover,
.cache-12ne64o:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-12ne64o:hover,
.cache-12ne64o:focus {
  color: #FFFFFF;
  background-color: #420480;
}

.cache-12ne64o:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-12ne64o .em6gco81 {
  -webkit-transition: max-width 450ms ease,padding 150ms ease,margin 150ms ease;
  transition: max-width 450ms ease,padding 150ms ease,margin 150ms ease;
  max-width: 0;
  margin-right: 0;
  padding-left: 0;
  overflow: hidden;
}

.cache-12ne64o:focus .em6gco81,
.cache-12ne64o:hover .em6gco81 {
  max-width: 275px;
  margin-right: 8px;
  padding-left: 8px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-12ne64o"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly when extendable with an icon 1`] = `
<DocumentFragment>
  .cache-1qyy8o0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4F0599;
  color: #FFFFFF;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.cache-1qyy8o0:hover,
.cache-1qyy8o0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1qyy8o0:hover,
.cache-1qyy8o0:focus {
  color: #FFFFFF;
  background-color: #420480;
}

.cache-1qyy8o0:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-1qyy8o0 .em6gco81 {
  -webkit-transition: max-width 450ms ease,padding 150ms ease,margin 150ms ease;
  transition: max-width 450ms ease,padding 150ms ease,margin 150ms ease;
  max-width: 0;
  margin-right: 0;
  padding-right: 0;
  overflow: hidden;
}

.cache-1qyy8o0:focus .em6gco81,
.cache-1qyy8o0:hover .em6gco81 {
  max-width: 275px;
  margin-right: 8px;
  padding-right: 8x;
}

.cache-1js4uj9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 0px;
  pointer-events: none;
}

.cache-una6lk {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-una6lk.cache-una6lk {
  vertical-align: middle;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1qyy8o0"
    type="button"
  >
    <div
      class="cache-1js4uj9 em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-una6lk"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly with a custom Icon 1`] = `
<DocumentFragment>
  .cache-1t304j8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4F0599;
  color: #FFFFFF;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1t304j8:hover,
.cache-1t304j8:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1t304j8:hover,
.cache-1t304j8:focus {
  color: #FFFFFF;
  background-color: #420480;
}

.cache-1t304j8:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-brwenz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1t304j8"
    type="button"
  >
    <div
      class="cache-brwenz em6gco82"
    >
      IconMock
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly with a rounded action button 1`] = `
<DocumentFragment>
  .cache-12hyc0n {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4F0599;
  color: #FFFFFF;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  width: 32px;
  height: 32px;
  padding: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-radius: 16px;
}

.cache-12hyc0n:hover,
.cache-12hyc0n:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-12hyc0n:hover,
.cache-12hyc0n:focus {
  color: #FFFFFF;
  background-color: #420480;
}

.cache-12hyc0n:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-12hyc0n>svg {
  pointer-events: none;
}

.cache-brwenz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-una6lk {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-una6lk.cache-una6lk {
  vertical-align: middle;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-12hyc0n"
    type="button"
  >
    <div
      class="cache-brwenz em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-una6lk"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly with a tooltip 1`] = `
<DocumentFragment>
  .cache-1t304j8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4F0599;
  color: #FFFFFF;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1t304j8:hover,
.cache-1t304j8:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1t304j8:hover,
.cache-1t304j8:focus {
  color: #FFFFFF;
  background-color: #420480;
}

.cache-1t304j8:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-i7e9al {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

.cache-una6lk {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-una6lk.cache-una6lk {
  vertical-align: middle;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-describedby="test"
    tabindex="0"
  >
    <button
      aria-describedby="test"
      aria-disabled="false"
      class="em6gco80 cache-1t304j8"
      type="button"
    >
      <div
        class="cache-i7e9al em6gco82"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-una6lk"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="cache-115wth8 em6gco81"
      >
        Hello
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Button should render correctly with an action button 1`] = `
<DocumentFragment>
  .cache-1gtc2fg {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4F0599;
  color: #FFFFFF;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  width: 32px;
  height: 32px;
  padding: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.cache-1gtc2fg:hover,
.cache-1gtc2fg:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1gtc2fg:hover,
.cache-1gtc2fg:focus {
  color: #FFFFFF;
  background-color: #420480;
}

.cache-1gtc2fg:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-1gtc2fg>svg {
  pointer-events: none;
}

.cache-brwenz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-una6lk {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-una6lk.cache-una6lk {
  vertical-align: middle;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1gtc2fg"
    type="button"
  >
    <div
      class="cache-brwenz em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-una6lk"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly with an icon on the right 1`] = `
<DocumentFragment>
  .cache-1t304j8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4F0599;
  color: #FFFFFF;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1t304j8:hover,
.cache-1t304j8:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1t304j8:hover,
.cache-1t304j8:focus {
  color: #FFFFFF;
  background-color: #420480;
}

.cache-1t304j8:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

.cache-14frhxz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 8px;
  pointer-events: none;
}

.cache-una6lk {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-una6lk.cache-una6lk {
  vertical-align: middle;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1t304j8"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
    <div
      class="cache-14frhxz em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-una6lk"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly without a children 1`] = `
<DocumentFragment>
  .cache-1t304j8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4F0599;
  color: #FFFFFF;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1t304j8:hover,
.cache-1t304j8:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1t304j8:hover,
.cache-1t304j8:focus {
  color: #FFFFFF;
  background-color: #420480;
}

.cache-1t304j8:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1t304j8"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button should render correctly without a children and an icon 1`] = `
<DocumentFragment>
  .cache-1t304j8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4F0599;
  color: #FFFFFF;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1t304j8:hover,
.cache-1t304j8:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1t304j8:hover,
.cache-1t304j8:focus {
  color: #FFFFFF;
  background-color: #420480;
}

.cache-1t304j8:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-brwenz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-una6lk {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-una6lk.cache-una6lk {
  vertical-align: middle;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1t304j8"
    type="button"
  >
    <div
      class="cache-brwenz em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-una6lk"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render large 1`] = `
<DocumentFragment>
  .cache-1t304j8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4F0599;
  color: #FFFFFF;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1t304j8:hover,
.cache-1t304j8:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1t304j8:hover,
.cache-1t304j8:focus {
  color: #FFFFFF;
  background-color: #420480;
}

.cache-1t304j8:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1t304j8"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render medium 1`] = `
<DocumentFragment>
  .cache-lieueh {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4F0599;
  color: #FFFFFF;
  font-size: 16px;
  line-height: 24px;
  padding: 8px 16px;
}

.cache-lieueh:hover,
.cache-lieueh:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-lieueh:hover,
.cache-lieueh:focus {
  color: #FFFFFF;
  background-color: #420480;
}

.cache-lieueh:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-lieueh"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render small 1`] = `
<DocumentFragment>
  .cache-1uqwav4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4F0599;
  color: #FFFFFF;
  font-size: 16px;
  line-height: 16px;
  padding: 8px 16px;
}

.cache-1uqwav4:hover,
.cache-1uqwav4:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1uqwav4:hover,
.cache-1uqwav4:focus {
  color: #FFFFFF;
  background-color: #420480;
}

.cache-1uqwav4:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1uqwav4"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render xsmall 1`] = `
<DocumentFragment>
  .cache-nzfkog {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4F0599;
  color: #FFFFFF;
  font-size: 14px;
  line-height: 20px;
  padding: 8px;
}

.cache-nzfkog:hover,
.cache-nzfkog:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-nzfkog:hover,
.cache-nzfkog:focus {
  color: #FFFFFF;
  background-color: #420480;
}

.cache-nzfkog:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-nzfkog"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render xxsmall 1`] = `
<DocumentFragment>
  .cache-15mulj1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4F0599;
  color: #FFFFFF;
  font-size: 12px;
}

.cache-15mulj1:hover,
.cache-15mulj1:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-15mulj1:hover,
.cache-15mulj1:focus {
  color: #FFFFFF;
  background-color: #420480;
}

.cache-15mulj1:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-15mulj1"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render info 1`] = `
<DocumentFragment>
  .cache-1curj8d {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #E1EBFF;
  color: #3F6ED8;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1curj8d:hover,
.cache-1curj8d:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1curj8d:hover,
.cache-1curj8d:focus {
  color: #3F6ED8;
  background-color: #c7daff;
}

.cache-1curj8d:focus {
  box-shadow: 0 0 0 2px rgba(225,235,255,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1curj8d"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render info-bordered 1`] = `
<DocumentFragment>
  .cache-75we73 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #3F6ED8;
  background-color: #FFFFFF;
  color: #3F6ED8;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-75we73:hover,
.cache-75we73:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-75we73 svg {
  fill: #3F6ED8;
  pointer-events: none;
}

.cache-75we73:hover,
.cache-75we73:focus {
  border: 1px solid #3F6ED8;
  color: #FFFFFF;
  background-color: #3F6ED8;
}

.cache-75we73:hover svg,
.cache-75we73:focus svg {
  fill: #FFFFFF;
}

.cache-75we73:focus {
  box-shadow: 0 0 0 2px rgba(63,110,216,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-75we73"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render link 1`] = `
<DocumentFragment>
  .cache-eq6k {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #FFFFFF;
  color: #3F6ED8;
  vertical-align: baseline;
  font-weight: 400;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-eq6k:hover,
.cache-eq6k:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-eq6k:hover,
.cache-eq6k:focus {
  color: #1e4293;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-eq6k"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render primary 1`] = `
<DocumentFragment>
  .cache-1t304j8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4F0599;
  color: #FFFFFF;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1t304j8:hover,
.cache-1t304j8:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1t304j8:hover,
.cache-1t304j8:focus {
  color: #FFFFFF;
  background-color: #420480;
}

.cache-1t304j8:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1t304j8"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render primary-bordered 1`] = `
<DocumentFragment>
  .cache-1k0yubi {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #4F0599;
  background-color: #FFFFFF;
  color: #4F0599;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1k0yubi:hover,
.cache-1k0yubi:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1k0yubi svg {
  fill: #4F0599;
  pointer-events: none;
}

.cache-1k0yubi:hover,
.cache-1k0yubi:focus {
  border: 1px solid #4F0599;
  color: #FFFFFF;
  background-color: #4F0599;
}

.cache-1k0yubi:hover svg,
.cache-1k0yubi:focus svg {
  fill: #FFFFFF;
}

.cache-1k0yubi:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1k0yubi"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render primary-soft-bordered 1`] = `
<DocumentFragment>
  .cache-1rd0vu7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #B2B6C3;
  background-color: #FCFCFD;
  color: #B2B6C3;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1rd0vu7:hover,
.cache-1rd0vu7:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1rd0vu7 svg {
  fill: #B2B6C3;
  pointer-events: none;
}

.cache-1rd0vu7:hover,
.cache-1rd0vu7:focus {
  border: 1px solid #4F0599;
  color: #FCFCFD;
  background-color: #4F0599;
}

.cache-1rd0vu7:hover svg,
.cache-1rd0vu7:focus svg {
  fill: #FCFCFD;
}

.cache-1rd0vu7:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1rd0vu7"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render secondary 1`] = `
<DocumentFragment>
  .cache-17eojek {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #F6F6F8;
  color: #4A4F62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-17eojek:hover,
.cache-17eojek:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-17eojek:hover,
.cache-17eojek:focus {
  color: #4A4F62;
  background-color: #e8e8ed;
}

.cache-17eojek:focus {
  box-shadow: 0 0 0 2px rgba(246,246,248,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-17eojek"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render secondary-bordered 1`] = `
<DocumentFragment>
  .cache-1rd0vu7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #B2B6C3;
  background-color: #FCFCFD;
  color: #B2B6C3;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1rd0vu7:hover,
.cache-1rd0vu7:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1rd0vu7 svg {
  fill: #B2B6C3;
  pointer-events: none;
}

.cache-1rd0vu7:hover,
.cache-1rd0vu7:focus {
  border: 1px solid #4F0599;
  color: #FCFCFD;
  background-color: #4F0599;
}

.cache-1rd0vu7:hover svg,
.cache-1rd0vu7:focus svg {
  fill: #FCFCFD;
}

.cache-1rd0vu7:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1rd0vu7"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render success 1`] = `
<DocumentFragment>
  .cache-188qpag {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #22C8A2;
  color: #FFFFFF;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-188qpag:hover,
.cache-188qpag:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-188qpag:hover,
.cache-188qpag:focus {
  color: #FFFFFF;
  background-color: #1eb290;
}

.cache-188qpag:focus {
  box-shadow: 0 0 0 2px rgba(34,200,162,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-188qpag"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render success-bordered 1`] = `
<DocumentFragment>
  .cache-tvn7q4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #22C8A2;
  background-color: #FFFFFF;
  color: #22C8A2;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-tvn7q4:hover,
.cache-tvn7q4:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-tvn7q4 svg {
  fill: #22C8A2;
  pointer-events: none;
}

.cache-tvn7q4:hover,
.cache-tvn7q4:focus {
  border: 1px solid #22C8A2;
  color: #FFFFFF;
  background-color: #22C8A2;
}

.cache-tvn7q4:hover svg,
.cache-tvn7q4:focus svg {
  fill: #FFFFFF;
}

.cache-tvn7q4:focus {
  box-shadow: 0 0 0 2px rgba(34,200,162,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-tvn7q4"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render success-soft-bordered 1`] = `
<DocumentFragment>
  .cache-bhgugq {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #B2B6C3;
  background-color: #FCFCFD;
  color: #B2B6C3;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-bhgugq:hover,
.cache-bhgugq:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-bhgugq svg {
  fill: #B2B6C3;
  pointer-events: none;
}

.cache-bhgugq:hover,
.cache-bhgugq:focus {
  border: 1px solid #22C8A2;
  color: #FCFCFD;
  background-color: #22C8A2;
}

.cache-bhgugq:hover svg,
.cache-bhgugq:focus svg {
  fill: #FCFCFD;
}

.cache-bhgugq:focus {
  box-shadow: 0 0 0 2px rgba(34,200,162,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-bhgugq"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render transparent 1`] = `
<DocumentFragment>
  .cache-tsqy33 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4A4F62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-tsqy33:hover,
.cache-tsqy33:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-tsqy33"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render warning 1`] = `
<DocumentFragment>
  .cache-13ol2dt {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #DD3252;
  color: #FFFFFF;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-13ol2dt:hover,
.cache-13ol2dt:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-13ol2dt:hover,
.cache-13ol2dt:focus {
  color: #FFFFFF;
  background-color: #d32344;
}

.cache-13ol2dt:focus {
  box-shadow: 0 0 0 2px rgba(221,50,82,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-13ol2dt"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render warning-bordered 1`] = `
<DocumentFragment>
  .cache-wdy5tu {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #DD3252;
  background-color: #FFFFFF;
  color: #DD3252;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-wdy5tu:hover,
.cache-wdy5tu:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-wdy5tu svg {
  fill: #DD3252;
  pointer-events: none;
}

.cache-wdy5tu:hover,
.cache-wdy5tu:focus {
  border: 1px solid #DD3252;
  color: #FFFFFF;
  background-color: #DD3252;
}

.cache-wdy5tu:hover svg,
.cache-wdy5tu:focus svg {
  fill: #FFFFFF;
}

.cache-wdy5tu:focus {
  box-shadow: 0 0 0 2px rgba(221,50,82,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-wdy5tu"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render warning-soft-bordered 1`] = `
<DocumentFragment>
  .cache-tz7us8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #B2B6C3;
  background-color: #FCFCFD;
  color: #B2B6C3;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-tz7us8:hover,
.cache-tz7us8:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-tz7us8 svg {
  fill: #B2B6C3;
  pointer-events: none;
}

.cache-tz7us8:hover,
.cache-tz7us8:focus {
  border: 1px solid #DD3252;
  color: #FCFCFD;
  background-color: #DD3252;
}

.cache-tz7us8:hover svg,
.cache-tz7us8:focus svg {
  fill: #FCFCFD;
}

.cache-tz7us8:focus {
  box-shadow: 0 0 0 2px rgba(221,50,82,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-tz7us8"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;
